FIX : edited profile card SCSS to remove layout shift when image hasn't loaded yet

--- a/frontend/src/app/features/public-profiles/profile-card/profile-card.component.scss
+++ b/frontend/src/app/features/public-profiles/profile-card/profile-card.component.scss
@@ -3,7 +3,7 @@ img.avatar {
   top: -43px;
   left: 16px;
   width: 150px;
-  height: auto;
+  height: 150px;
   border-radius: 50%;
   background-color: var(--mat-sys-surface);
   border: 1px solid var(--mat-sys-outline);
